src/main/java/com/example/sea_solutions_challenge/Errors/MeuErro.java
package com.example.sea_solutions_challenge.Errors;public class MeuErro {
}
